opam-version: "1.2"
maintainer: "Jean-Christophe.Filliatre@lri.fr"
authors: ["Jean-Christophe Filliâtre"]
homepage: "https://www.lri.fr/~filliatr/software.en.html"
bug-reports: "https://github.com/backtracking/ptmap/issues"
dev-repo: "https://github.com/backtracking/ptmap.git"
license: "GPL-2.1"
build: [
  ["jbuilder" "subst" "-p" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  ["jbuilder" "runtest" "-p" name]
]
depends: [
  "ocamlfind"
  "obuild" {build}
  "qtest" {test & >= "2.2"}
]
